add material styling

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>
-Dasheng Bi
-</title>
+	<title>
+		Dasheng Bi
+	</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-Placeholder
+	<div class="navcont">
+		<ul class="nav">
+			<li class="nav"><a class="curr_nav">Main</a></li>
+			<li class="nav"><a href="cv.html">C.V.</a></li>
+			<li class="nav"><a href="teaching.html">Teaching</a></li>
+		</ul>
+	</div>
+	To be developed <br>
 </body>
+
+<footer>
+</footer>
 </html>
