--- a/cv.html
+++ b/cv.html
@@ -26,14 +26,14 @@
 			<div class="indent">
 				<h4 class="lralign cvitem">
 					B.A., University of California, Berkeley
-					<span>2019-Expected 2023</span>
+					<span>August 2019-Expected May 2023</span>
 				</h4>
 				<ul class="cvlist">
 					<li>Computer Science, Mathematics, Molecular and Cell Biology-Neurobiology</li>
 					<li>GPA: 4.000, Honors to Date</li>
-					<li>
+					<li id="courses_taken">
 						<button type="button" class="expand">
-							Courses Taken
+							Selected List of Taken Courses
 						</button>
 						<div class="expandcontent">
 							<table>
@@ -152,25 +152,83 @@
 				</ul>
 			</div>
 
-			<h2>Research Experience</h2>
+			<h2 class="cvtitle">Research Experience</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
 					Undergraduate Researcher,
-					<a href="https://people.eecs.berkeley.edu/~yss/", class=texta>
+					<a href="https://people.eecs.berkeley.edu/~yss/" class=texta>
 						Song Lab
 					</a>
+					<span>August 2020-Present</span>
 					<br>
 					Depts. of EECS and Statistics, University of California, Berkeley
-					<span>August 2020-Present</span>
 				</h4>
-
+				<ul class="cvlist">
+					<li>Developed a pipeline for scalable genome-level inference of recombination rate from sequencing data based on tree inference methods and statistical learning.</li>
+					<li>Investigating the phenomenon of codon usage bias in the genome and its differential distribution within and across genes and species.</li>
+				</ul>
+				<h4 class="lralign cvitem">
+					High School Research Intern,
+					<a href="https://fenglaboratory.org/" class=texta>
+						Feng Lab
+					</a>
+					<span>June 2018-August 2018</span>
+					<br>
+					Dept. of Brain and Cognitive Sciences, MIT
+				</h4>
+				<ul class="cvlist">
+					<li>Analyzed electroencephalography (EEG) signals in mice to investigate the function of the thalamic reticular nucleus (TRN) and its role in regulating sleep.</li>
+					<li>EEG Pipeline <a href="https://doi.org/10.1101/454488" class="texta">Preprint</a> on <em>bioRxiv</em>.</li>
+					<li>TRN Subnetworks <a href="https://doi.org/10.1038/s41586-020-2504-5" class="texta">Paper</a> in <em>Nature</em>.</li>
+				</ul>
 			</div>
-			<h2>Academic Positions</h2>
-			<h2>Awards and Honors</h2>
+
+			<h2 class="cvtitle">Academic Positions</h2>
+			<div class="indent">
+<!-- 				<h4 class="lralign cvitem">
+					Undergraduate Graduate Student Instructor (uGSI)
+					<br>
+					Dept. of EECS, University of California, Berkeley
+					<span>Summer 2020</span>
+				</h4> -->
+				<h4 class="lralign cvitem">
+					Reader
+					<span>Spring 2020</span>
+					<br>
+					Dept. of EECS, University of California, Berkeley
+				</h4>
+				<ul class="cvlist">
+					<li>Course staff for <a href="https://www.eecs70.org/" class="texta">COMPSCI 70</a></li>
+					<li>Graded homeworks and exams, held office hours, and answered questions on Piazza.</li>
+				</ul>
+			</div>
+
+			<h2 class="cvtitle">Awards and Honors</h2>
+			<div class="indent">
+				<h4 class="lralign cvitem">
+					Dean's List,
+					College of Letters and Science, University of California, Berkeley
+					<span>Fall 2020, Fall 2019</span>
+				</h4>
+				<ul class="cvlist">
+					<li>Top 10% semester GPA in the College.</li>
+					<li>Not awarded in Spring 2020 due to the COVID-19 pandemic.</li>
+				</ul>
+				<h4 class="lralign cvitem">
+					Scholar,
+					Regeneron Science Talent Search (STS)
+					<span>January 2019</span>
+				</h4>
+				<ul class="cvlist">
+					<li>Selected for research ability and promise as scientist as a high school senior.</li>
+					<li><a href="https://www.societyforscience.org/blog/300-u-s-high-school-students-named-as-scholars-in-regeneron-science-talent-search-2019/" class="texta">Press release</a> from the Society for Science & the Public.</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </body>
 
 <footer>
+	<p>Dasheng Bi, 2021</p>
 </footer>
 </html>
