fix fonts, start index

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <body>
 	<div class="navcont">
 		<ul class="nav">
-			<li class="nav"><a class="curr_nav">Main</a></li>
+			<li class="nav"><a class="curr_nav">Index</a></li>
 			<li class="nav"><a href="cv.html">C.V.</a></li>
 			<li class="nav"><a href="teaching.html">Teaching</a></li>
 		</ul>
+	</div>
+	<div class="card">
+		<h3>Dasheng Bi</h3>
+		<p>Undergrad at <a href="https://www.berkeley.edu/" class=texta>UC Berkeley</a> majoring in <a href="https://eecs.berkeley.edu/" class="texta">CS</a>, <a href="https://math.berkeley.edu/" class="texta">Math</a>, and <a href="https://mcb.berkeley.edu/" class="texta">MCB</a>.</p>
+		<p>Interested in computational and theoretical neuroscience.</p>
+		<p><a href="https://scholar.google.com/citations?user=ibf1Y7UAAAAJ&hl=en" class="texta">Google Scholar</a></p>
 	</div>
 	To be developed <br>
 </body>
