--- a/teaching.html
+++ b/teaching.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="navcont">
 		<ul class="nav">
-			<li class="nav"><a href="index.html">Main</a></li>
+			<li class="nav"><a href="index.html">Index</a></li>
 			<li class="nav"><a href="cv.html">C.V.</a></li>
 			<li class="nav"><a class="curr_nav">Teaching</a></li>
 		</ul>
