--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="navcont">
 		<ul class="nav">
-			<li class="nav"><a href="index.html">Main</a></li>
+			<li class="nav"><a href="index.html">Index</a></li>
 			<li class="nav"><a class="curr_nav">C.V.</a></li>
 			<li class="nav"><a href="teaching.html">Teaching</a></li>
 		</ul>
@@ -32,9 +32,9 @@
 					<li>Computer Science, Mathematics, Molecular and Cell Biology-Neurobiology</li>
 					<li>GPA: 4.000, Honors to Date</li>
 					<li id="courses_taken">
-						<button type="button" class="expand">
+						<a class="expand">
 							Selected List of Taken Courses
-						</button>
+						</a>
 						<div class="expandcontent">
 							<table>
 								<tr>
@@ -208,11 +208,10 @@
 				<h4 class="lralign cvitem">
 					Dean's List,
 					College of Letters and Science, University of California, Berkeley
-					<span>Fall 2020, Fall 2019</span>
+					<span>Spring 2021, Fall 2020, Fall 2019</span>
 				</h4>
 				<ul class="cvlist">
-					<li>Top 10% semester GPA in the College.</li>
-					<li>Not awarded in Spring 2020 due to the COVID-19 pandemic.</li>
+					<li><a href="https://lsadvising.berkeley.edu/policies/deans-listhonors" class="texta">Description</a> from the College of Letters and Science, UC Berkeley.</li>
 				</ul>
 				<h4 class="lralign cvitem">
 					Scholar,
@@ -220,7 +219,6 @@
 					<span>January 2019</span>
 				</h4>
 				<ul class="cvlist">
-					<li>Selected for research ability and promise as scientist as a high school senior.</li>
 					<li><a href="https://www.societyforscience.org/blog/300-u-s-high-school-students-named-as-scholars-in-regeneron-science-talent-search-2019/" class="texta">Press release</a> from the Society for Science & the Public.</li>
 				</ul>
 			</div>
