change cs70 link, comment future info

--- a/cv.html
+++ b/cv.html
@@ -190,7 +190,10 @@
 					<br>
 					Dept. of EECS, University of California, Berkeley
 					<span>Summer 2020</span>
-				</h4> -->
+				</h4>
+				<ul class="cvlist">
+					<li>Course staff for <a href="https://www.eecs70.org/" class="texta">COMPSCI 70</a></li>
+				</ul> -->
 				<h4 class="lralign cvitem">
 					Reader
 					<span>Spring 2020</span>
@@ -198,7 +201,7 @@
 					Dept. of EECS, University of California, Berkeley
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.eecs70.org/" class="texta">COMPSCI 70</a></li>
+					<li>Course staff for <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70</a></li>
 					<li>Graded homeworks and exams, held office hours, and answered questions on Piazza.</li>
 				</ul>
 			</div>
