--- a/teaching.html
+++ b/teaching.html
@@ -30,14 +30,14 @@
 		<div class="subcard">
 			<h3>Content</h3>
 			<ul class="weeks">
-				<li class="sg-week">Week 1</li>
+<!-- 				<li class="sg-week">Week 1</li>
 				<li class="sg-week">Week 2</li>
 				<li class="sg-week">Week 3</li>
 				<li class="sg-week">Week 4</li>
 				<li class="sg-week">Week 5</li>
 				<li class="sg-week">Week 6</li>
 				<li class="sg-week">Week 7</li>
-				<li class="sg-week">Week 8</li>
+				<li class="sg-week">Week 8</li> -->
 			</ul>
 		</div>
 	</div>
