add imgs, update teaching

--- a/cv.html
+++ b/cv.html
@@ -185,15 +185,15 @@
 
 			<h2 class="cvtitle">Academic Positions</h2>
 			<div class="indent">
-<!-- 				<h4 class="lralign cvitem">
+				<h4 class="lralign cvitem">
 					Undergraduate Graduate Student Instructor (uGSI)
 					<br>
 					Dept. of EECS, University of California, Berkeley
 					<span>Summer 2020</span>
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.eecs70.org/" class="texta">COMPSCI 70</a></li>
-				</ul> -->
+					<li>Course staff for <a href="https://www.eecs70.org/" class="texta">COMPSCI 70</a>.</li>
+				</ul>
 				<h4 class="lralign cvitem">
 					Reader
 					<span>Spring 2020</span>
@@ -201,7 +201,7 @@
 					Dept. of EECS, University of California, Berkeley
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70</a></li>
+					<li>Course staff for <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70.</a></li>
 					<li>Graded homeworks and exams, held office hours, and answered questions on Piazza.</li>
 				</ul>
 			</div>
