--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="script.js" async></script>
 </head>
 
 <body>
@@ -17,12 +18,44 @@
 		</ul>
 	</div>
 	<div class="card">
-		<h3>Dasheng Bi</h3>
-		<p>Undergrad at <a href="https://www.berkeley.edu/" class=texta>UC Berkeley</a> majoring in <a href="https://eecs.berkeley.edu/" class="texta">CS</a>, <a href="https://math.berkeley.edu/" class="texta">Math</a>, and <a href="https://mcb.berkeley.edu/" class="texta">MCB</a>.</p>
-		<p>Interested in computational and theoretical neuroscience.</p>
-		<p><a href="https://scholar.google.com/citations?user=ibf1Y7UAAAAJ&hl=en" class="texta">Google Scholar</a></p>
+		<h2>Undergrad at <a href="https://www.berkeley.edu/" class=texta>UC Berkeley</a> majoring in <a href="https://eecs.berkeley.edu/" class="texta">CS</a>, <a href="https://math.berkeley.edu/" class="texta">Math</a>, and <a href="https://mcb.berkeley.edu/" class="texta">MCB</a>.</h2>
+		<h3>Research interests are computational and theoretical neuroscience. <a href="https://scholar.google.com/citations?user=ibf1Y7UAAAAJ&hl=en" class="texta">Google Scholar</a>.</h3>
+		<a class="expand">Some Photographs of Campus</a>
+		<div class="expandcontent">
+			<div class="subcard">
+				<table class="photographs">
+					<tr>
+						<td class="pic">
+							<img src="img/campanile-19">
+						</td>
+						<td>
+							<p>Sather Tower by South Hall Road</p>
+							<p>Fall 2019</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="pic">
+							<img src="img/campanile-20">
+						</td>
+						<td>
+							<p>Sather Tower by 4.0 Hill</p>
+							<p>Spring 2020</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="pic">
+							<img src="img/evans_fog" onmouseover="evans_hover(this);" onmouseout="evans_nonhover(this);">
+						</td>
+						<td>
+							<p>Evans Hall with and without Sather Tower</p>
+							<p>Spring 2020 and Fall 2019</p>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<p>Still under development.</p>
 	</div>
-	To be developed <br>
 </body>
 
 <footer>
