--- a/teaching.html
+++ b/teaching.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" id="MathJax-script" async
 	  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 	</script>
+	<script src="script.js" async></script>
 </head>
 
 <body>
@@ -26,19 +27,56 @@
 		</h2>
 		<div class="subcard">
 			<h3>General Information</h3>
+<!-- 			<ul>
+				<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials.</li>
+				<li>Refer to Piazza for announcements and logistical updates.</li>
+			</ul> -->
 		</div>
 		<div class="subcard">
-			<h3>Content</h3>
-			<ul class="weeks">
-<!-- 				<li class="sg-week">Week 1</li>
-				<li class="sg-week">Week 2</li>
-				<li class="sg-week">Week 3</li>
-				<li class="sg-week">Week 4</li>
-				<li class="sg-week">Week 5</li>
-				<li class="sg-week">Week 6</li>
-				<li class="sg-week">Week 7</li>
-				<li class="sg-week">Week 8</li> -->
-			</ul>
+			<h3>Discussion-Specific Content</h3>
+<!-- 			<ul class="weeks">
+				<li class="sg-week">
+					<a class="expand oexpand">Week 1: Logic, Proofs, Sets</a>
+					<div class="expandcontent">
+					</div>
+				</li>
+				<li class="sg-week">
+					<a class="expand">Week 2: Cardinality, Computability, Graphs, Modular Arithmetic</a>
+					<div class="expandcontent">
+					</div>
+				</li>
+				<li class="sg-week">
+					<a class="expand">Week 3: Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
+					<div class="expandcontent"></div>
+				</li>
+				<li class="sg-week">
+					<a class="expand">Week 4: <span class="emph red">Midterm</span>; Counting, Probability, Conditionals, Bayes</a>
+					<div class="expandcontent"></div>
+				</li>
+				<li class="sg-week">
+					<a class="expand">Week 5: Independence, Random Variables, Variance, Covariance, Discrete Distributions</a>
+					<div class="expandcontent"></div>
+				</li>
+				<li class="sg-week">
+					<a class="expand">Week 6: Continuous Probability, Continuous Distributions, Joint Distributions</a>
+					<div class="expandcontent"></div>
+				</li>
+				<li class="sg-week">
+					<a class="expand">Week 7: Concentration Inequalities, Confidence Intervals, Markov Chains</a>
+					<div class="expandcontent"></div>
+				</li>
+				<li class="sg-week">
+					<a class="expand">Week 8: Review; <span class="emph red">Final</span></a>
+					<div class="expandcontent"></div>
+				</li>
+			</ul> -->
+		</div>
+		<div class="subcard left-70">
+			<h3>Fun Problems (Perhaps Pertaining to Course Content)</h3>
+			<p>Note: many of these problems are adapted from "Problems of the Day" given at the beginning of lectures by <a class="texta" href="https://people.eecs.berkeley.edu/~sinclair/">Prof. Sinclair</a> and <a class="texta" href="https://people.eecs.berkeley.edu/~yss/">Prof. Song</a> in the Fall 2019 iteration of CS 70. I enjoyed solving these problems, and hope that current students of CS 70 will find them interesting as well.</p>
+			<h4>I. Two Logic Puzzles:</h4>
+			<p>1. Bob is accused of murder. Bob's attorney never lies. The Judge states:"If Bob committed this crime, he didn't act alone." The Attorney responds:"That's not true!" <span class="emph">Question:</span> Did the attorney help Bob?</p>
+			<p>2. Is the statement "A watched child never falls asleep unless they are watched" True, False, or Undetermined?</p>
 		</div>
 	</div>
 </body>
