update teaching for start of semester

--- a/teaching.html
+++ b/teaching.html
@@ -26,50 +26,66 @@
 			COMPSCI 70, Summer 2021
 		</h2>
 		<div class="subcard">
-			<h3>General Information</h3>
-<!-- 			<ul>
-				<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials.</li>
-				<li>Refer to Piazza for announcements and logistical updates.</li>
-			</ul> -->
+			<h3>General(ly Boring) Information</h3>
+			<ul>
+				<li>Welcome to the class! &#128579;</li>
+				<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials. Please refer to Piazza for timely official announcements and logistical updates.</li>
+				<li><a class="texta" href="teaching.html" title="Self-Referential Link">This</a> webpage contains supplementary notes and resources intended to complement my discussions at {MTWR 5-6p, TWRF 2-3p}.</li>
+				<li><span class="emph">Note</span>: I currently do not have officially scheduled office hours, but feel free to make an appointment with me via email (dbi@) if you would like to discuss something.</li>
+			</ul>
 		</div>
 		<div class="subcard">
 			<h3>Discussion-Specific Content</h3>
-<!-- 			<ul class="weeks">
+			<ul class="weeks">
 				<li class="sg-week">
 					<a class="expand oexpand">Week 1: Logic, Proofs, Sets</a>
 					<div class="expandcontent">
+						<p>This week has not started yet.</p>
 					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 2: Cardinality, Computability, Graphs, Modular Arithmetic</a>
 					<div class="expandcontent">
+						<p>This week has not started yet.</p>
 					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 3: Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
-					<div class="expandcontent"></div>
+					<div class="expandcontent">
+						<p>This week has not started yet.</p>
+					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 4: <span class="emph red">Midterm</span>; Counting, Probability, Conditionals, Bayes</a>
-					<div class="expandcontent"></div>
+					<div class="expandcontent">
+						<p>This week has not started yet.</p>
+					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 5: Independence, Random Variables, Variance, Covariance, Discrete Distributions</a>
-					<div class="expandcontent"></div>
+					<div class="expandcontent">
+						<p>This week has not started yet.</p>
+					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 6: Continuous Probability, Continuous Distributions, Joint Distributions</a>
-					<div class="expandcontent"></div>
+					<div class="expandcontent">
+						<p>This week has not started yet.</p>
+					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 7: Concentration Inequalities, Confidence Intervals, Markov Chains</a>
-					<div class="expandcontent"></div>
+					<div class="expandcontent">
+						<p>This week has not started yet.</p>
+					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 8: Review; <span class="emph red">Final</span></a>
-					<div class="expandcontent"></div>
+					<div class="expandcontent">
+						<p>This week has not started yet.</p>
+					</div>
 				</li>
-			</ul> -->
+			</ul>
 		</div>
 		<div class="subcard left-70">
 			<h3>Fun Problems (Perhaps Pertaining to Course Content)</h3>
