add notes table

--- a/teaching.html
+++ b/teaching.html
@@ -40,7 +40,20 @@
 				<li class="sg-week">
 					<a class="expand oexpand">Week 1: Logic, Proofs, Sets</a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
+						<table class="borderedtable">
+							<tr>
+								<th>Discussion #</th>
+								<th>MTWR 5-6p</th>
+								<th>TWRF 2-3p</th>
+								<th>Remarks</th>
+							</tr>
+							<tr>
+								<td>Discussion 1A</td>
+								<td><a class="texta">5-6p Notes</a></td>
+								<td><a class="texta">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+						</table>
 					</div>
 				</li>
 				<li class="sg-week">
