--- a/teaching.html
+++ b/teaching.html
@@ -42,16 +42,16 @@
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
-								<th>Discussion #</th>
+								<th>Dis #</th>
 								<th>MTWR 5-6p</th>
 								<th>TWRF 2-3p</th>
 								<th>Remarks</th>
 							</tr>
 							<tr>
-								<td>Discussion 1A</td>
-								<td><a class="texta">5-6p Notes</a></td>
-								<td><a class="texta">2-3p Notes</a></td>
-								<td>-</td>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis01a.pdf">Dis 1A</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1VA1K-JBMeff0cQRepYOWb6NJWNkfuLt1/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td>{Partitions arising from propositions, duality in Boolean logic, and relation between Venn diagrams and Boolean logic} are <span class="emph">not</span> in scope.</td>
 							</tr>
 						</table>
 					</div>
