add mtwr 5-6p dis1b

--- a/teaching.html
+++ b/teaching.html
@@ -54,6 +54,12 @@
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1oWmpyZMA_hCx0D-N3TJnWpDNT4NAWEfy/view?usp=sharing">2-3p Notes</a></td>
 								<td>{Partitions arising from propositions, duality in Boolean logic, and relation between Venn diagrams and Boolean logic} are <span class="emph">not</span> in scope.</td>
 							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis01b.pdf">Dis 1B</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1m2BxKUM1sOwd0LFwKfyqC9mP0HYJyWnQ/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td>{Orders of growth} are <span class="emph">not</span> in scope.</td>
+							</tr>
 						</table>
 					</div>
 				</li>
