add twrf 2-3p dis1b

--- a/teaching.html
+++ b/teaching.html
@@ -32,6 +32,7 @@
 				<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials. Please refer to Piazza for timely official announcements and logistical updates.</li>
 				<li><a class="texta" href="teaching.html" title="Self-Referential Link">This</a> webpage contains supplementary notes and resources intended to complement my discussions at {MTWR 5-6p, TWRF 2-3p}.</li>
 				<li><span class="emph">Note</span>: I currently do not have officially scheduled office hours, but feel free to make an appointment with me via email (dbi@) if you would like to discuss something.</li>
+				<li><span class="emph">Note: No lecture on Mon., Jun. 28 (and its corresponding discussions) due to the observation of Juneteenth.</span></li>
 			</ul>
 		</div>
 		<div class="subcard">
@@ -39,7 +40,7 @@
 			<p><a class="texta" href="https://docs.google.com/forms/d/e/1FAIpQLSdgxSsDTZ3iA_NztqGIGRcH8x7JNWCQJlsHBtM3fEw17VhD-Q/viewform?usp=sf_link">Anonymous Feedback Form</a></p>
 			<ul class="weeks">
 				<li class="sg-week">
-					<a class="expand oexpand">Week 1: Logic, Proofs, Sets</a>
+					<a class="expand oexpand">Week 1: Logic, Proofs, Sets, Cardinality</a>
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
@@ -57,20 +58,20 @@
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis01b.pdf">Dis 1B</a></td>
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1m2BxKUM1sOwd0LFwKfyqC9mP0HYJyWnQ/view?usp=sharing">5-6p Notes</a></td>
-								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1NH3qfWB5eSNTsFFyi01e-v6i4gC7L70N/view?usp=sharing">2-3p Notes</a></td>
 								<td>{Orders of growth} are <span class="emph">not</span> in scope.</td>
 							</tr>
 						</table>
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand">Week 2: Cardinality, Computability, Graphs, Modular Arithmetic</a>
+					<a class="expand">Week 2: <s>Cardinality, Computability</s> (<span class="emph">No Monday Lecture</span>), Graphs, Modular Arithmetic</a>
 					<div class="expandcontent">
 						<p>This week has not started yet.</p>
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand">Week 3: Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
+					<a class="expand">Week 3: (<span class="emph">No Monday Lecture</span>), Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
 					<div class="expandcontent">
 						<p>This week has not started yet.</p>
 					</div>
