--- a/teaching.html
+++ b/teaching.html
@@ -61,6 +61,12 @@
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1NH3qfWB5eSNTsFFyi01e-v6i4gC7L70N/view?usp=sharing">2-3p Notes</a></td>
 								<td>{Orders of growth} are <span class="emph">not</span> in scope.</td>
 							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis01c.pdf">Dis 1C</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1Pe8lb8YBazmFDRb4o22DGurCTweC09CX/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
 						</table>
 					</div>
 				</li>
