add mtwr 5-6p dis1d and twrf 2-3p dis1c

--- a/teaching.html
+++ b/teaching.html
@@ -64,8 +64,14 @@
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis01c.pdf">Dis 1C</a></td>
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1Pe8lb8YBazmFDRb4o22DGurCTweC09CX/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1cchp2lwfAbCfFgAEWzJy_7XZugJzTGC6/view?usp=sharing">2-3p Notes</a></td>
+								<td>{The shift operator (<<)} is <span class="emph">not</span> in scope.</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis01d.pdf">Dis 1D</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1zO_w6f7N4EDBIASO4D_tQFy4BW6uVbUq/view?usp=sharing">5-6p Notes</a></td>
 								<td class="links"><a class="texta">2-3p Notes</a></td>
-								<td>-</td>
+								<td>Optionally, try the problem on preserving set operations; it will help build your intuition on sets and functions. (<a class="texta" href="https://www.sp21.eecs70.org/static/homeworks/hw1.pdf">Problem 2</a>)</td>
 							</tr>
 						</table>
 					</div>
