--- a/teaching.html
+++ b/teaching.html
@@ -70,7 +70,7 @@
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis01d.pdf">Dis 1D</a></td>
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1zO_w6f7N4EDBIASO4D_tQFy4BW6uVbUq/view?usp=sharing">5-6p Notes</a></td>
-								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/18ou2AkBMhKYSL0k0J9Toi9OYfbMxTF0B/view?usp=sharing">2-3p Notes</a></td>
 								<td>Optionally, try the problem on preserving set operations; it will help build your intuition on sets and functions. (<a class="texta" href="https://www.sp21.eecs70.org/static/homeworks/hw1.pdf">Problem 2</a>)</td>
 							</tr>
 						</table>
