add mtwr 5-6p dis2a

--- a/teaching.html
+++ b/teaching.html
@@ -40,7 +40,7 @@
 			<p><a class="texta" href="https://docs.google.com/forms/d/e/1FAIpQLSdgxSsDTZ3iA_NztqGIGRcH8x7JNWCQJlsHBtM3fEw17VhD-Q/viewform?usp=sf_link">Anonymous Feedback Form</a></p>
 			<ul class="weeks">
 				<li class="sg-week">
-					<a class="expand oexpand">Week 1: Logic, Proofs, Sets, Cardinality</a>
+					<a class="expand">Week 1: Logic, Proofs, Sets, Cardinality</a>
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
@@ -77,9 +77,34 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand">Week 2: <s>Cardinality, Computability</s> (<span class="emph">No Monday Lecture</span>), Graphs, Modular Arithmetic</a>
+					<a class="expand oexpand">Week 2: <s>Cardinality, Computability</s> (<span class="emph">No Monday Lecture</span>), Graphs, Modular Arithmetic</a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
+						<table class="borderedtable">
+							<tr>
+								<th>Dis #</th>
+								<th>MTWR 5-6p</th>
+								<th>TWRF 2-3p</th>
+								<th>Remarks</th>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02a.pdf">Dis 2A</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1ktbj-m4_TnYhH7QUd6uduDDuK8xjVjKp/view">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td>Optionally, for motivation on graph theory, check out the talk "<a class="texta" href="https://www.youtube.com/watch?v=e5xxdNeNkmE">Networks of Oscillators That Synchronise Themselves</a>," by Steven Strogatz.</td>
+							</tr>
+<!-- 							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02b.pdf">Dis 2B</a></td>
+								<td class="links"><a class="texta">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02c.pdf">Dis 2C</a></td>
+								<td class="links"><a class="texta">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td></td>
+							</tr> -->
+						</table>
 					</div>
 				</li>
 				<li class="sg-week">
@@ -120,13 +145,13 @@
 				</li>
 			</ul>
 		</div>
-		<div class="subcard left-70">
+<!-- 		<div class="subcard left-70">
 			<h3>Fun Problems (Perhaps Pertaining to Course Content)</h3>
 			<p>Note: many of these problems are adapted from "Problems of the Day" given at the beginning of lectures by <a class="texta" href="https://people.eecs.berkeley.edu/~sinclair/">Prof. Sinclair</a> and <a class="texta" href="https://people.eecs.berkeley.edu/~yss/">Prof. Song</a> in the Fall 2019 iteration of CS 70. I enjoyed solving these problems, and hope that current students of CS 70 will find them interesting as well.</p>
 			<h4>I. Two Logic Puzzles:</h4>
 			<p>1. Bob is accused of murder. Bob's attorney never lies. The Judge states:"If Bob committed this crime, he didn't act alone." The Attorney responds:"That's not true!" <span class="emph">Question:</span> Did the attorney help Bob?</p>
 			<p>2. Is the statement "A watched child never falls asleep unless they are watched" True, False, or Undetermined?</p>
-		</div>
+		</div> -->
 	</div>
 </body>
 <footer>
