--- a/teaching.html
+++ b/teaching.html
@@ -89,7 +89,7 @@
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02a.pdf">Dis 2A</a></td>
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1ktbj-m4_TnYhH7QUd6uduDDuK8xjVjKp/view">5-6p Notes</a></td>
-								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1gCgTCbzU-rYcUVAxuJEvpKw5zM65EfEX/view?usp=sharing">2-3p Notes</a></td>
 								<td>Optionally, for motivation on graph theory, check out the talk "<a class="texta" href="https://www.youtube.com/watch?v=e5xxdNeNkmE">Networks of Oscillators That Synchronise Themselves</a>," by Steven Strogatz.</td>
 							</tr>
 <!-- 							<tr>
