--- a/teaching.html
+++ b/teaching.html
@@ -92,13 +92,13 @@
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1gCgTCbzU-rYcUVAxuJEvpKw5zM65EfEX/view?usp=sharing">2-3p Notes</a></td>
 								<td>Optionally, for motivation on graph theory, check out the talk "<a class="texta" href="https://www.youtube.com/watch?v=e5xxdNeNkmE">Networks of Oscillators That Synchronise Themselves</a>," by Steven Strogatz.</td>
 							</tr>
-<!-- 							<tr>
-								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02b.pdf">Dis 2B</a></td>
-								<td class="links"><a class="texta">5-6p Notes</a></td>
-								<td class="links"><a class="texta">2-3p Notes</a></td>
-								<td></td>
-							</tr>
 							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02b.pdf">Dis 2B</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1yeKbuSxJYEe4-pJT7JFBKe6x0QMNmOVj/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td>e-GCD is extremely important!</td>
+							</tr>
+<!-- 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02c.pdf">Dis 2C</a></td>
 								<td class="links"><a class="texta">5-6p Notes</a></td>
 								<td class="links"><a class="texta">2-3p Notes</a></td>
