add mtwr dis2c, twrf dis2b

--- a/teaching.html
+++ b/teaching.html
@@ -28,11 +28,16 @@
 		<div class="subcard">
 			<h3>General(ly Boring) Information</h3>
 			<ul>
-				<li>Welcome to the class! &#128579;</li>
-				<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials. Please refer to Piazza for timely official announcements and logistical updates.</li>
-				<li><a class="texta" href="teaching.html" title="Self-Referential Link">This</a> webpage contains supplementary notes and resources intended to complement my discussions at {MTWR 5-6p, TWRF 2-3p}.</li>
-				<li><span class="emph">Note</span>: I currently do not have officially scheduled office hours, but feel free to make an appointment with me via email (dbi@) if you would like to discuss something.</li>
-				<li><span class="emph">Note: No lecture on Mon., Jun. 28 (and its corresponding discussions) due to the observation of Juneteenth.</span></li>
+				<li class="expand">Welcome to the class! &#128579;</li>
+				<div class="expandcontent">
+					<ul>
+						<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials. Please refer to Piazza for timely official announcements and logistical updates.</li>
+						<li><a class="texta" href="teaching.html" title="Self-Referential Link">This</a> webpage contains supplementary notes and resources intended to complement my discussions at {MTWR 5-6p, TWRF 2-3p}.</li>
+						<li><span class="emph">Note</span>: I currently do not have officially scheduled office hours, but feel free to make an appointment with me via email (dbi@) if you would like to discuss something.</li>
+						<li><span class="emph">Note: No lecture on Mon., Jun. 28 (and its corresponding discussions) due to the observation of Juneteenth.</span></li>
+					</ul>
+				</div>
+				<li><span class="emph">Note: No lecture on Mon., Jul. 5 (and its corresponding discussions) due to the observation of Independence Day.</span></li>
 			</ul>
 		</div>
 		<div class="subcard">
@@ -95,15 +100,15 @@
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02b.pdf">Dis 2B</a></td>
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1yeKbuSxJYEe4-pJT7JFBKe6x0QMNmOVj/view?usp=sharing">5-6p Notes</a></td>
-								<td class="links"><a class="texta">2-3p Notes</a></td>
-								<td>e-GCD is extremely important!</td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1zzaEWEM8sRt9ZtxrVVZemYLIfCqiMtcE/view?usp=sharing">2-3p Notes</a></td>
+								<td>e-GCD is quite important.</td>
 							</tr>
-<!-- 							<tr>
+							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02c.pdf">Dis 2C</a></td>
-								<td class="links"><a class="texta">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1B6b6Kynq5DMwF-3hFAroDgHwcCC2ycnL/view?usp=sharing">5-6p Notes</a></td>
 								<td class="links"><a class="texta">2-3p Notes</a></td>
-								<td></td>
-							</tr> -->
+								<td>The formula for CRT, and intuition for its construction, are quite important.</td>
+							</tr>
 						</table>
 					</div>
 				</li>
