--- a/teaching.html
+++ b/teaching.html
@@ -106,7 +106,7 @@
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis02c.pdf">Dis 2C</a></td>
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1B6b6Kynq5DMwF-3hFAroDgHwcCC2ycnL/view?usp=sharing">5-6p Notes</a></td>
-								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1QdyJuEDtnYzDXxktL9hqg9H3PzDzhcf7/view?usp=sharing">2-3p Notes</a></td>
 								<td>The formula for CRT, and intuition for its construction, are quite important.</td>
 							</tr>
 						</table>
