add mtwr and twrf dis3a

--- a/teaching.html
+++ b/teaching.html
@@ -82,7 +82,7 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand oexpand">Week 2: <s>Cardinality, Computability</s> (<span class="emph">No Monday Lecture</span>), Graphs, Modular Arithmetic</a>
+					<a class="expand">Week 2: <s>Cardinality, Computability</s> (<span class="emph">No Monday Lecture</span>), Graphs, Modular Arithmetic</a>
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
@@ -113,9 +113,34 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand">Week 3: (<span class="emph">No Monday Lecture</span>), Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
+					<a class="expand oexpand">Week 3: (<span class="emph">No Monday Lecture</span>), Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
+						<table class="borderedtable">
+							<tr>
+								<th>Dis #</th>
+								<th>MTWR 5-6p</th>
+								<th>TWRF 2-3p</th>
+								<th>Remarks</th>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis03a.pdf">Dis 3A</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/14Td-nQiCdEGNXnoAoMqn0iPoD0ukOnjn/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1qcLyCg55nsX9DleBg4aYDg7X0xR69Cgx/view?usp=sharing">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+<!-- 							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis03b.pdf">Dis 3B</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis03c.pdf">Dis 3C</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr> -->
+						</table>
 					</div>
 				</li>
 				<li class="sg-week">
