--- a/teaching.html
+++ b/teaching.html
@@ -128,18 +128,18 @@
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1qcLyCg55nsX9DleBg4aYDg7X0xR69Cgx/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-<!-- 							<tr>
+							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis03b.pdf">Dis 3B</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
-								<td>-</td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1MMv0zvRIutN-WmuMD5vQhjyHj9RknGse/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1KcLTDk1qfFLRSCq1XIKZ_PSRWj4TlMHA/view?usp=sharing">2-3p Notes</a></td>
+								<td>Homogeneous polynomials are <span class="emph">not</span> in scope.</td>
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis03c.pdf">Dis 3C</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
-								<td>-</td>
-							</tr> -->
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1Rj-d2LwrBbsuqUmy7Y7twvazstQtX5lj/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1HFtWoBxd_cpq5HGassxsJQF5CPOqi4tA/view?usp=sharing">2-3p Notes</a></td>
+								<td>Group theory (in particular, the discussion on the group S4) and metrics (in particular, the discussion on the manhattan distance metric on the grid) are <span class="emph">not</span> in scope.</td>
+							</tr>
 						</table>
 					</div>
 				</li>
